feat(cms): :sparkles:  adding collections

--- a/cms/package.json
+++ b/cms/package.json
@@ -11,15 +11,16 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "slugify": "^1.4.6",
     "strapi": "3.4.6",
     "strapi-admin": "3.4.6",
-    "strapi-utils": "3.4.6",
-    "strapi-plugin-content-type-builder": "3.4.6",
+    "strapi-connector-mongoose": "3.4.6",
     "strapi-plugin-content-manager": "3.4.6",
-    "strapi-plugin-users-permissions": "3.4.6",
+    "strapi-plugin-content-type-builder": "3.4.6",
     "strapi-plugin-email": "3.4.6",
     "strapi-plugin-upload": "3.4.6",
-    "strapi-connector-mongoose": "3.4.6"
+    "strapi-plugin-users-permissions": "3.4.6",
+    "strapi-utils": "3.4.6"
   },
   "author": {
     "name": "A Strapi developer"
