--- a/cms/package.json
+++ b/cms/package.json
@@ -18,6 +18,7 @@
     "strapi-plugin-content-manager": "3.4.6",
     "strapi-plugin-content-type-builder": "3.4.6",
     "strapi-plugin-email": "3.4.6",
+    "strapi-plugin-graphql": "3.4.6",
     "strapi-plugin-upload": "3.4.6",
     "strapi-plugin-users-permissions": "3.4.6",
     "strapi-utils": "3.4.6"
