--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.10",
     "autoprefixer": "^10.2.4",
+    "graphql": "^15.5.0",
     "next": "latest",
     "postcss": "^8.2.6",
     "react": "^17.0.1",
