--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@apollo/client": "^3.3.10",
     "autoprefixer": "^10.2.4",
+    "date-fns": "^2.17.0",
     "graphql": "^15.5.0",
     "next": "latest",
     "postcss": "^8.2.6",
