--- a/client/package.json
+++ b/client/package.json
@@ -16,12 +16,15 @@
     "postcss": "^8.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-markdown": "^5.0.3",
+    "react-syntax-highlighter": "^15.4.3",
     "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
+    "@types/react-syntax-highlighter": "^13.5.0",
     "typescript": "4.0"
   },
   "license": "MIT"
