--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.10",
+    "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.2.4",
     "date-fns": "^2.17.0",
     "graphql": "^15.5.0",
